# os_lab_2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.txt
data/: data.py
doc/: report.odt
include/: quicksort.h
src/: a.out  p_quickwort  p_quickwort.cpp  quicksort.cpp
test/: data.py  data.txt  test.cpp
